<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="@color/backgroud_base">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="341dp"
        android:paddingLeft="-18.5dp"
        android:src="@drawable/logodois"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@drawable/bg_rounded_top"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="24dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHeight_percent="0.50"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/league_spartan_semibold"
            android:text="@string/entrar"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/id"
            android:textColor="@android:color/white"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/edtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:fontFamily="@font/league_spartan_regular"
            android:hint="@string/identifica_o_de_usu_rio"
            android:padding="12dp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/senha"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:hint="@string/asteriscos"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvEsqueceuSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/league_spartan_medium"
            android:text="@string/esqueceu_a_senha"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/azul_claro"
            android:fontFamily="@font/league_spartan_regular"
            android:text="@string/entrar"
            android:textColor="@color/azul_padrao"
            android:textSize="20dp"

            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>