<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="0dp"
    android:paddingHorizontal="30dp"
    android:layout_marginBottom="0dp">

    <LinearLayout
        android:id="@+id/containerOpcoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_card_simple">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="0dp"
                android:background="@drawable/bg_card_simple">

                <TextView
                    android:id="@+id/tvNumero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/corTexto"/>

                <TextView
                    android:id="@+id/tvMes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dezembro"
                    android:layout_marginTop="-5dp"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:textColor="@color/azul_1"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:orientation="vertical"

                android:paddingVertical="3dp"
                android:layout_marginLeft="15dp">

                <TextView
                    android:id="@+id/tvTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_tulo"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/corTexto"/>

                <TextView
                    android:id="@+id/tvSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subt_tulo"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/corTexto"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:src="@drawable/relogio">

                </ImageView>

                <TextView
                    android:id="@+id/tvPend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"

                    android:textColor="@color/corTexto"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="12dp"
        android:background="#D0D0D0" />





</LinearLayout>
